# payquery-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: args.rs  config.rs  main.rs  pretty.rs
