[package]
name = "payquery"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
dirs = "4.0"
regex = "1.5"
